--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.1'
+
 services:
 
   mongo:
@@ -5,14 +7,27 @@ services:
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
-  
-  
-  adminer:
-    image: adminer
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
     restart: always
     ports:
-      - 8080:8080
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb+srv://slava187115:GYUDuSQYI6GFkmVk@cluster0.gi5tyfq.mongodb.net/
+      ME_CONFIG_BASICAUTH: false
 
-volumes:
-  redis-data:
+  webapi:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__MongoDb=mongodb+srv://slava187115:GYUDuSQYI6GFkmVk@cluster0.gi5tyfq.mongodb.net/msailing
+    depends_on:
+      - mongo
