--- a/m-sailingclient/client/package.json
+++ b/m-sailingclient/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "ngx-spinner": "^15.0.1",
+    "ngx-toastr": "^15.2.2",
     "rxjs": "^7.8.0",
     "rxjs-operators": "^1.1.3",
     "xng-breadcrumb": "^6.0.0",
