коммит с созданием заказа с одним товаром но разными размерами, перед изменением количетсва товаров после заказа.

--- a/m-sailingclient/client/angular.json
+++ b/m-sailingclient/client/angular.json
@@ -30,7 +30,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.less"
+
             ],
             "scripts": []
           },
