Работает добавление удаление товара прямо в компоненте товара,  обработка ошибок с количеством

--- a/m-sailingclient/client/angular.json
+++ b/m-sailingclient/client/angular.json
@@ -63,8 +63,8 @@
               "optimization": true,
               "vendorChunk": false,
               "extractLicenses": true,
-              "sourceMap": false,
-              "namedChunks": false
+              "sourceMap": true,
+              "namedChunks": true
             }
           },
           "defaultConfiguration": "production"
